--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="bg-gray-100 text-gray-800 font-nunito">
-    
+
      <!-- Header -->
     <header class="bg-blue-600 text-white shadow sticky top-0 z-50">
       <div class="max-w-7xl mx-auto p-4 flex flex-col sm:flex-row justify-between items-center">
@@ -25,11 +25,11 @@
           </a>
         </div>
         <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 text-sm sm:text-base">
-          <a href="/" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Home</a>
+          <a href="/" class="bg-blue-700 px-2 py-1 rounded font-medium">Home</a>
           <a href="/papers/previous-year.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Previous Papers</a>
           <a href="/exams/entrance.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Entrance Exams</a>
           <a href="/notifications/govt.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Govt Notifications</a>
-          <a href="/about.html" class="bg-blue-700 px-2 py-1 rounded font-medium">About Us</a>
+          <a href="/about.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">About Us</a>
         </nav>
       </div>
     </header>
