--- a/notifications/govt.html
+++ b/notifications/govt.html
@@ -28,8 +28,8 @@
           <a href="/" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Home</a>
           <a href="/papers/previous-year.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Previous Papers</a>
           <a href="/exams/entrance.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Entrance Exams</a>
-          <a href="/notifications/govt.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Govt Notifications</a>
-          <a href="/about.html" class="bg-blue-700 px-2 py-1 rounded font-medium">About Us</a>
+          <a href="/notifications/govt.html" class="bg-blue-700 px-2 py-1 rounded font-medium">Govt Notifications</a>
+          <a href="/about.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">About Us</a>
         </nav>
       </div>
     </header>
