--- a/papers/previous-year.html
+++ b/papers/previous-year.html
@@ -25,10 +25,10 @@
         </div>
         <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 text-sm sm:text-base">
           <a href="/" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Home</a>
-          <a href="/papers/previous-year.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Previous Papers</a>
+          <a href="/papers/previous-year.html" class="bg-blue-700 px-2 py-1 rounded font-medium">Previous Papers</a>
           <a href="/exams/entrance.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Entrance Exams</a>
           <a href="/notifications/govt.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Govt Notifications</a>
-          <a href="/about.html" class="bg-blue-700 px-2 py-1 rounded font-medium">About Us</a>
+          <a href="/about.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">About Us</a>
         </nav>
       </div>
     </header>
