--- a/papers/college/bsc-3-physics.html
+++ b/papers/college/bsc-3-physics.html
@@ -117,7 +117,7 @@
               <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                 <h4 class="font-medium mb-2">2025 Question Paper</h4>
                 <div class="flex justify-between items-center">
-                  <span class="text-sm text-gray-600">May 2025</span>
+                  <span class="text-sm text-gray-600">April 2025</span>
                   <a href="/downloads/bsc/physics/2025-modern-physics.pdf" class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
                 </div>
               </div>
@@ -126,7 +126,7 @@
                 <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                 <h4 class="font-medium mb-2">2024 Question Paper</h4>
                 <div class="flex justify-between items-center">
-                    <span class="text-sm text-gray-600">May 2024</span>
+                    <span class="text-sm text-gray-600">April 2024</span>
                     <div class="space-x-2">
                     <a href="https://archive.org/details/elements-of-modern-physics-2024-hpexamhub" 
                         target="_blank"
@@ -154,7 +154,7 @@
             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
             <h4 class="font-medium mb-2">2022 Question Paper</h4>
             <div class="flex justify-between items-center">
-                <span class="text-sm text-gray-600">May 2022</span>
+                <span class="text-sm text-gray-600">April 2022</span>
                 <div class="space-x-2">
                 <a href="https://archive.org/details/elements-of-moderm-physics-2022-hpexamhub.in" 
                     target="_blank"
@@ -170,15 +170,43 @@
             </div>
               
               <!-- 2021 Paper -->
-              <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
-                <h4 class="font-medium mb-2">2021 Question Paper</h4>
-                <div class="flex justify-between items-center">
-                  <span class="text-sm text-gray-600">Dec 2021</span>
-                  <a href="/downloads/bsc/physics/2021-modern-physics.pdf" class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+            <h4 class="font-medium mb-2">2021 Question Paper</h4>
+            <div class="flex justify-between items-center">
+                <span class="text-sm text-gray-600">April 2021</span>
+                <div class="space-x-2">
+                <a href="https://archive.org/details/elements-of-moderm-physics-2021-hpexamhub.in" 
+                    target="_blank"
+                    class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
+                    View Online
+                </a>
+                <a href="https://archive.org/download/elements-of-moderm-physics-2021-hpexamhub.in/Elements%20of%20Moderm%20physics%20-2021%20%28hpexamhub.in%29.pdf" 
+                    class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">
+                    Download
+                </a>
                 </div>
-              </div>
             </div>
-          </div>
+            </div>
+
+            <!-- Semester System Paper -->
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+            <h4 class="font-medium mb-2">Semester System Question Paper</h4>
+            <div class="flex justify-between items-center">
+                <span class="text-sm text-gray-600">Previous System</span>
+                <div class="space-x-2">
+                <a href="https://archive.org/details/elements-of-moderm-physics-semester-hpexamhub.in" 
+                    target="_blank"
+                    class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
+                    View Online
+                </a>
+                <a href="https://archive.org/download/elements-of-moderm-physics-semester-hpexamhub.in/Elements%20of%20Moderm%20physics%20-semester%20%28hpexamhub.in%29.pdf" 
+                    class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">
+                    Download
+                </a>
+                </div>
+            </div>
+            </div>
+
           
           <!-- Nuclear Physics Papers -->
           <div class="mb-8">
