--- a/papers/college/bsc-3-physics.html
+++ b/papers/college/bsc-3-physics.html
@@ -215,7 +215,7 @@
             <div class="bg-white border-2 border-blue-200 rounded-lg p-4 hover:shadow-md transition">
               <h4 class="font-medium mb-2">All Years Combined (2021-2024)</h4>
               <div class="flex justify-between items-center">
-                <span class="text-sm text-gray-600">Complete Collection</span>
+                <span class="text-sm text-gray-600">Complete</span>
                 <div class="space-x-2">
                   <a href="https://archive.org/details/elements-of-moderm-physics-hpexamhub.in" target="_blank"
                     class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
@@ -230,6 +230,168 @@
             </div>
           </div>
         </div>
+
+
+        <!-- Nuclear Physics Papers -->
+        <div class="mb-8">
+          <h3 class="text-xl font-semibold mb-4 bg-gray-100 p-2 rounded">Nuclear & Particle Physics (PHYS304TH)</h3>
+          <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+            <!-- 2025 Paper -->
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+              <h4 class="font-medium mb-2">2025 Question Paper</h4>
+              <div class="flex justify-between items-center">
+                <span class="text-sm text-gray-600">May 2025</span>
+                <a href="/downloads/bsc/physics/2025-nuclear-physics.pdf"
+                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+              </div>
+            </div>
+
+            <!-- 2024 Paper -->
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+              <h4 class="font-medium mb-2">2024 Question Paper</h4>
+              <div class="flex justify-between items-center">
+                <span class="text-sm text-gray-600">May 2024</span>
+                <a href="/downloads/bsc/physics/2024-nuclear-physics.pdf"
+                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+              </div>
+            </div>
+
+            <!-- 2023 Paper -->
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+              <h4 class="font-medium mb-2">2023 Question Paper</h4>
+              <div class="flex justify-between items-center">
+                <span class="text-sm text-gray-600">Dec 2023</span>
+                <a href="/downloads/bsc/physics/2023-nuclear-physics.pdf"
+                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+              </div>
+            </div>
+
+            <!-- 2022 Paper -->
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+              <h4 class="font-medium mb-2">2022 Question Paper</h4>
+              <div class="flex justify-between items-center">
+                <span class="text-sm text-gray-600">May 2022</span>
+                <a href="/downloads/bsc/physics/2022-nuclear-physics.pdf"
+                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+              </div>
+            </div>
+
+            <!-- 2021 Paper -->
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+              <h4 class="font-medium mb-2">2021 Question Paper</h4>
+              <div class="flex justify-between items-center">
+                <span class="text-sm text-gray-600">Dec 2021</span>
+                <a href="/downloads/bsc/physics/2021-nuclear-physics.pdf"
+                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Quantum Mechanics Papers -->
+        <div class="mb-8">
+          <h3 class="text-xl font-semibold mb-4 bg-gray-100 p-2 rounded">Quantum Mechanics (PHYS305TH)</h3>
+          <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+            <!-- 2025 Paper -->
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+              <h4 class="font-medium mb-2">2025 Question Paper</h4>
+              <div class="flex justify-between items-center">
+                <span class="text-sm text-gray-600">May 2025</span>
+                <a href="/downloads/bsc/physics/2025-quantum-mechanics.pdf"
+                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+              </div>
+            </div>
+
+            <!-- 2024 Paper -->
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+              <h4 class="font-medium mb-2">2024 Question Paper</h4>
+              <div class="flex justify-between items-center">
+                <span class="text-sm text-gray-600">May 2024</span>
+                <a href="/downloads/bsc/physics/2024-quantum-mechanics.pdf"
+                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+              </div>
+            </div>
+
+            <!-- 2023 Paper -->
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+              <h4 class="font-medium mb-2">2023 Question Paper</h4>
+              <div class="flex justify-between items-center">
+                <span class="text-sm text-gray-600">Dec 2023</span>
+                <a href="/downloads/bsc/physics/2023-quantum-mechanics.pdf"
+                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+              </div>
+            </div>
+
+            <!-- 2022 Paper -->
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+              <h4 class="font-medium mb-2">2022 Question Paper</h4>
+              <div class="flex justify-between items-center">
+                <span class="text-sm text-gray-600">May 2022</span>
+                <a href="/downloads/bsc/physics/2022-quantum-mechanics.pdf"
+                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+              </div>
+            </div>
+
+            <!-- 2021 Paper -->
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+              <h4 class="font-medium mb-2">2021 Question Paper</h4>
+              <div class="flex justify-between items-center">
+                <span class="text-sm text-gray-600">Dec 2021</span>
+                <a href="/downloads/bsc/physics/2021-quantum-mechanics.pdf"
+                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Notes Section -->
+      <div class="bg-yellow-50 border-l-4 border-yellow-400 p-4 mb-8 rounded-r-lg">
+        <h2 class="text-xl font-bold text-yellow-800 mb-3">Study Notes (Coming Soon)</h2>
+        <div class="grid sm:grid-cols-3 gap-4">
+          <div class="bg-white p-4 rounded-lg border border-yellow-200">
+            <h3 class="font-medium mb-2 text-yellow-800">Modern Physics Notes</h3>
+            <p class="text-sm text-gray-600">Relativity, Atomic & Solid State Physics</p>
+            <div class="mt-2 text-xs bg-yellow-100 text-yellow-800 inline-block px-2 py-1 rounded">Under Preparation
+            </div>
+          </div>
+          <div class="bg-white p-4 rounded-lg border border-yellow-200">
+            <h3 class="font-medium mb-2 text-yellow-800">Quantum Mechanics Notes</h3>
+            <p class="text-sm text-gray-600">Wavefunctions & Schrödinger Equation</p>
+            <div class="mt-2 text-xs bg-yellow-100 text-yellow-800 inline-block px-2 py-1 rounded">Under Preparation
+            </div>
+          </div>
+          <div class="bg-white p-4 rounded-lg border border-yellow-200">
+            <h3 class="font-medium mb-2 text-yellow-800">Nuclear Physics Notes</h3>
+            <p class="text-sm text-gray-600">Radioactivity & Particle Physics</p>
+            <div class="mt-2 text-xs bg-yellow-100 text-yellow-800 inline-block px-2 py-1 rounded">Under Preparation
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Important Questions -->
+      <div class="bg-blue-50 p-6 rounded-xl">
+        <h2 class="text-xl font-bold text-blue-800 mb-4">Frequently Asked Questions</h2>
+        <div class="space-y-4">
+          <div>
+            <h3 class="font-medium mb-1">1. What's the exam pattern for BSc 3rd Year Physics?</h3>
+            <p class="text-gray-700 text-sm">Each paper has 50 marks theory (3 hours) + 50 marks internal assessment
+              (practical/viva).</p>
+          </div>
+          <div>
+            <h3 class="font-medium mb-1">2. Which topics are most important in Quantum Mechanics?</h3>
+            <p class="text-gray-700 text-sm">Schrödinger Equation (1D problems), Angular Momentum, and Perturbation
+              Theory are frequently asked.</p>
+          </div>
+          <div>
+            <h3 class="font-medium mb-1">3. How to prepare for Nuclear Physics practicals?</h3>
+            <p class="text-gray-700 text-sm">Focus on GM Counter experiments, Half-life determination, and absorption
+              studies (alpha/beta/gamma).</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Footer -->
