--- a/papers/college/bsc-3-physics.html
+++ b/papers/college/bsc-3-physics.html
@@ -120,7 +120,7 @@
           <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
 
             <!-- 2025 Paper -->
-            <<div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
               <h4 class="font-medium mb-2">2025 Question Paper</h4>
               <div class="flex justify-between items-center">
                 <span class="text-sm text-gray-600">April 2025</span>
