--- a/about.html
+++ b/about.html
@@ -21,8 +21,7 @@
     <section class="bg-gradient-to-r from-blue-600 to-blue-800 text-white py-16 text-center">
       <div class="max-w-4xl mx-auto px-4">
         <h1 class="text-4xl sm:text-5xl font-bold mb-4">About HP Exam Hub</h1>
-        <p class="text-xl sm:text-2xl mb-6">A student
-           initiative to provide free exam preparation resources for everyone</p>
+        <p class="text-xl sm:text-2xl mb-6">A student's initiative to provide free exam preparation resources for everyone</p>
       </div>
     </section>
 
