--- a/papers/college/bsc-3-physics.html
+++ b/papers/college/bsc-3-physics.html
@@ -96,8 +96,10 @@
 
         <!-- Modern Physics Papers -->
         <div class="mb-8">
-          <h3 class="text-xl font-semibold mb-4 bg-gray-100 p-2 rounded">Elements of Modern Physics (PHYS301TH)</h3> 
-          <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">All Available</span>
+          <h3 class="text-xl font-semibold mb-4 bg-gray-100 p-2 rounded">Elements of Modern Physics (PHYS301TH)
+            <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">All Available</span></h3> 
+
+        
           <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
 
             <!-- 2025 Paper -->
