--- a/assets/header.html
+++ b/assets/header.html
@@ -9,8 +9,8 @@
     <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 text-sm sm:text-base">
       <a href="/" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Home</a>
       <a href="/papers/previous-year.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Govt. Exam Papers</a>
+      <a href="/entrance-exams/entrance.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Entrance Exams</a>
       <a href="/papers/college-previous-year.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">College Exam Papers</a>
-      <a href="/exams/entrance.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Entrance Exams</a>
       <a href="/notifications/govt.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Govt Notifications</a>
       <a href="/about.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">About Us</a>
     </nav>
