--- a/entrance-exams/entrance.html
+++ b/entrance-exams/entrance.html
@@ -46,12 +46,8 @@
             <h3 class="font-semibold text-lg mb-2 text-blue-800">MCA Entrance</h3>
             <ul class="space-y-2">
               <li class="flex justify-between items-center">
-                <span>HPU MCA 2024</span>
-                <a href="/papers/entrance/mca/hpu-2024.html" class="text-blue-600 hover:underline text-sm">Download</a>
-              </li>
-              <li class="flex justify-between items-center">
                 <span>Previous Year Papers</span>
-                <a href="/papers/entrance/mca/previous.html" class="text-blue-600 hover:underline text-sm">View All</a>
+                <a href="/entrance-exams/mca/mca.html" class="text-blue-600 hover:underline text-sm">View All</a>
               </li>
             </ul>
           </div>
